# opengl-workshop

./: .gitignore  404.html  CMakeLists.txt  custom.css  index.html  introduction.html  print.html  searchindex.js  searchindex.json  setup.html
.github/workflows/: book-update.yml  cmake.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md  setup.md
book/src/hello-triangle/: clear.md  drawing.md  index.md  shaders.md  vertex-array.md
book/theme/: highlight.js
framework/: CMakeLists.txt
framework/include/: framework.h
framework/src/: framework.c  utils.c
hello-triangle/: clear.html  drawing.html  index.html  shaders.html  vertex-array.html
src/: CMakeLists.txt  main.c
workshop/: CMakeLists.txt
workshop/glad/: CMakeLists.txt
workshop/glad/include/glad/: gl.h
workshop/include/: utils.h
workshop/src/: framework.c
